<resources>
    <string name="app_name">InstagramPhotoViewer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_placeholder">JordanHsu</string>
    <string name="likecount_placeholder">999,999</string>
    <string name="caption_placeholder">臣亮言：先帝創業未半，而中道崩殂。今天下三分，益州
疲弊，此誠危急存亡之秋也。然侍衛之臣，不懈於內；忠志之
士，忘身於外者，蓋追先帝之殊遇，欲報之於陛下也。誠宜開
張聖聽，以光先帝遺德，恢弘志士之氣；不宜妄自菲薄，引喻
失義，以塞忠諫之路也。宮中府中，俱為一體，陟罰臧否，不
宜異同。若有作姦犯科，及為忠善者，宜付有司，論其刑賞，
以昭陛下平明之治，不宜篇私，使內外異法也</string>
    <string name="comment_placeholder">Very Good! Very Good! Very Good! Perfect photo!!!!!Very Good! Perfect photo!!!!!</string>
    <string name="instagram_autu_token">2107486180.369ca46.a58425c8557e44caa6e4d3d01c77c1ff</string>
    <string name="like_wording">likes</string>
    <string name="load_more">Load more comments...</string>
    <string name="get_popular_data_failed_msg">Get popular data failed!\n please try again later</string>
    <string name="relative_timestamp_placeholder">just now</string>
</resources>
