<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    android:paddingBottom="15dp">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/profilePhotoImageView"
        android:background="@color/onloading_background_color"
        android:layout_gravity="bottom"
        android:layout_below="@+id/photoContainerImageView"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:layout_height="wrap_content"
        android:id="@+id/photoContainerImageView"
        android:minHeight="300dp"
        android:background="@color/onloading_background_color"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username_placeholder"
        android:id="@+id/userNameTextView"
        android:layout_alignTop="@+id/profilePhotoImageView"
        android:layout_toEndOf="@+id/profilePhotoImageView"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/likecount_placeholder"
        android:id="@+id/likeCountTextView"
        android:layout_alignBottom="@+id/profilePhotoImageView"
        android:layout_alignStart="@+id/userNameTextView"
        android:textColor="@color/hyperlink_blue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caption_placeholder"
        android:textColor="@color/black"
        android:id="@+id/captionTextView"
        android:layout_alignStart="@+id/profilePhotoImageView"
        android:layout_below="@+id/likeCountTextView"
        android:layout_alignEnd="@+id/photoContainerImageView"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relative_timestamp_placeholder"
        android:id="@+id/relativeTimestampTextView"
        android:textSize="16sp"
        android:shadowColor="@color/grey"
        android:layout_alignBottom="@+id/userNameTextView"
        android:layout_alignParentEnd="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/captionTextView"
        android:layout_alignEnd="@+id/captionTextView"
        android:layout_alignStart="@+id/captionTextView"
        android:id="@+id/commentContainerLayout"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_placeholder"
            android:textColor="@color/hyperlink_blue"
            android:id="@+id/commentUserNameTextView1"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/commentContentTextView1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_placeholder"
            android:textColor="@color/black"
            android:id="@+id/commentContentTextView1"
            android:layout_below="@+id/commentUserNameTextView1"
            android:layout_toEndOf="@+id/commentProfileImageView1" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/commentProfileImageView1"
            android:background="@color/onloading_background_color"
            android:layout_marginRight="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_placeholder"
            android:textColor="@color/hyperlink_blue"
            android:id="@+id/commentUserNameTextView2"
            android:layout_alignTop="@+id/commentProfileImageView2"
            android:layout_alignStart="@+id/commentContentTextView1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_placeholder"
            android:textColor="@color/black"
            android:id="@+id/commentContentTextView2"
            android:layout_below="@+id/commentUserNameTextView2"
            android:layout_alignStart="@+id/commentUserNameTextView2" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/commentProfileImageView2"
            android:background="@color/onloading_background_color"
            android:layout_below="@+id/commentContentTextView1"
            android:layout_alignStart="@+id/commentProfileImageView1"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/load_more"
            android:id="@+id/loadMoreTextView"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:textColor="@color/grey"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/commentContentTextView2"
            android:layout_alignParentStart="true" />

    </RelativeLayout>


</RelativeLayout>
